# ripp

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: Cargo.toml
benches/benches/: gipa.rs  inner_products.rs  poly_commit.rs  tipa.rs
benches/benches/groth16_aggregation/: bench.rs
benches/examples/: groth16_aggregation.rs
dh_commitments/: Cargo.toml
dh_commitments/src/: lib.rs
dh_commitments/src/afgho16/: mod.rs
dh_commitments/src/identity/: mod.rs
dh_commitments/src/pedersen/: mod.rs
examples/: scaling-ipp.rs
gipa/: Cargo.toml
gipa/src/: lib.rs
inner_products/: Cargo.toml
inner_products/src/: lib.rs
ip_proofs/: Cargo.toml
ip_proofs/examples/groth16_aggregation/: example.rs  groth16_aggregation.rs
ip_proofs/src/: gipa.rs  ip_commitment.rs  lib.rs  util.rs
ip_proofs/src/applications/: groth16_aggregation.rs  mod.rs  poly_commit.rs
ip_proofs/src/applications/poly_commit/: mod.rs  transparent.rs
ip_proofs/src/gipa/: data_structures.rs  mod.rs  prover.rs  verifier.rs
ip_proofs/src/ip_commitment/: data_structures.rs  generic.rs  identity.rs  mipp.rs  mod.rs  pairing.rs  scalar.rs  tipp.rs
ip_proofs/src/ip_commitment/constructions/: generic.rs  mipp.rs  mod.rs  pairing.rs  scalar.rs
ip_proofs/src/ip_commitment/constructions/snarkpack/: data_structures.rs  mod.rs
ip_proofs/src/ip_commitment/constructions/snarkpack/kzg/: data_structures.rs  mod.rs  prove.rs  verify.rs
ip_proofs/src/tipa/: data_structures.rs  mod.rs  prover.rs  setup.rs  structured_scalar_message.rs  tipp.rs  verifier.rs
ip_proofs/src/tipa/kzg/: data_structures.rs  mod.rs  prove.rs  verify.rs
plot/: ipp-scaling.gnuplot
sipp/: Cargo.toml
sipp/examples/: scaling-ipp.rs
sipp/src/: lib.rs  rng.rs  util.rs
src/: lib.rs  rng.rs
