[package]
name = "benches"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
algebra = {git = "https://github.com/scipr-lab/zexe/", package = "algebra", features = [ "ed_on_bls12_381", "bls12_381", "bls12_377", "bw6_761" ] }
zexe_cp = {git = "https://github.com/scipr-lab/zexe/", package = "crypto-primitives", features = [ "groth16" ] }
r1cs_core = {git = "https://github.com/scipr-lab/zexe/", package = "r1cs-core" }
r1cs_std = {git = "https://github.com/scipr-lab/zexe/", package = "r1cs-std", features = [ "bls12_377" ] }
ff_fft = {git = "https://github.com/scipr-lab/zexe/", package = "ff-fft" }
groth16 = {git = "https://github.com/scipr-lab/zexe/", package = "groth16" }
rand = { version = "0.7" }
digest = { version = "0.9" }
blake2 = { version = "0.9" }
csv = { version = "1.1.3" }

inner_products = { path = "../inner_products" }
ip_proofs = { path = "../ip_proofs" }
dh_commitments = { path = "../dh_commitments" }

[[bench]]
name = "inner_products"
path = "benches/inner_products.rs"
harness = false

[[bench]]
name = "gipa"
path = "benches/gipa.rs"
harness = false

[[bench]]
name = "tipa"
path = "benches/tipa.rs"
harness = false

[[bench]]
name = "poly_commit"
path = "benches/poly_commit.rs"
harness = false

[[bench]]
name = "groth16_aggregation"
path = "benches/groth16_aggregation/bench.rs"
harness = false

[[example]]
name = "groth16_aggregation"
path = "examples/groth16_aggregation.rs"
