[package]
name = "benches"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ark-ec = { git = "https://github.com/arkworks-rs/algebra", features = [ "parallel" ] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", features = [ "parallel" ] }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", features = [ "parallel" ] }
ark-std = { git = "https://github.com/arkworks-rs/utils", features = [ "parallel" ] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16/", features = [ "parallel", "r1cs" ] }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives/", features = [ "parallel", "r1cs" ], branch = "main" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", features = [ "curve" ] }
ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", features = [ "curve", "r1cs" ] }
ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves" }

ark-relations = { git = "https://github.com/arkworks-rs/snark" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std/" }

rand = { version = "0.8" }
digest = { version = "0.9" }
blake2 = { version = "0.9" }
csv = { version = "1.1.3" }

ark-inner-products = { path = "../inner_products" }
ark-ip-proofs = { path = "../ip_proofs" }
ark-dh-commitments = { path = "../dh_commitments" }

[[bench]]
name = "inner_products"
path = "benches/inner_products.rs"
harness = false

[[bench]]
name = "gipa"
path = "benches/gipa.rs"
harness = false

[[bench]]
name = "tipa"
path = "benches/tipa.rs"
harness = false

[[bench]]
name = "poly_commit"
path = "benches/poly_commit.rs"
harness = false

[[bench]]
name = "groth16_aggregation"
path = "benches/groth16_aggregation/bench.rs"
harness = false

[[example]]
name = "groth16_aggregation"
path = "examples/groth16_aggregation.rs"