[package]
name = "ark-dh-commitments"
version = "0.4.0"
authors = [
    "Benedikt Bünz",
    "Mary Maller",
    "Pratyush Mishra",
    "Nirvan Tyagi",
    "Psi Vesely",
]
edition = "2021"
homepage = "https://github.com/arkworks-rs/ripp"
repository = "https://github.com/arkworks-rs/ripp"
documentation = "https://docs.rs/ark-dh-commitments/"

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = { version = "0.4", features = [ "derive" ] }
ark-std = "0.4"
rayon = { version = "1", optional = true }

ark-inner-products = { path = "../inner_products" }
derivative = "2"
rand_chacha = "0.3"
blake2 = "0.10"

[dev-dependencies]
ark-bls12-381 = { version = "0.4", features = [ "curve" ] }
ark-ed-on-bls12-381 = "0.4"

[features]
default = [ "parallel" ]
parallel = [ "ark-ff/parallel", "ark-ec/parallel", "rayon" ]
