[package]
name = "gipa"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = {git = "https://github.com/nirvantyagi/zexe/", package = "algebra", features = [ "ed_on_bls12_381" ] }
rand = { version = "0.7" }
digest = { version = "0.9" }

inner_products = { path = "../inner_products" }
dh_commitments = { path = "../dh_commitments" }
