[package]
name = "ark-inner-products"
version = "0.1.0"
authors = [
    "Benedikt Bünz",
    "Mary Maller",
    "Pratyush Mishra",
    "Nirvan Tyagi",
    "Noah Vesely",
]
edition = "2018"
homepage = "https://github.com/arkworks-rs/ripp"
repository = "https://github.com/arkworks-rs/ripp"
documentation = "https://docs.rs/ark-inner-products/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra/", features = [ "parallel" ] }
ark-ec = { git = "https://github.com/arkworks-rs/algebra/", features = [ "parallel" ] }
ark-std = { git = "https://github.com/arkworks-rs/utils/", features = [ "parallel" ] }
rand = { version = "0.7" }
rayon = { version = "1" }

[features]
default = [ "parallel" ]
parallel = []
