[package]
name = "ark-inner-products"
version = "0.4.0"
authors = [
    "Benedikt Bünz",
    "Mary Maller",
    "Pratyush Mishra",
    "Nirvan Tyagi",
    "Psi Vesely",
]
edition = "2018"
homepage = "https://github.com/arkworks-rs/ripp"
repository = "https://github.com/arkworks-rs/ripp"
documentation = "https://docs.rs/ark-inner-products/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = { version = "0.4", features = [ "derive" ] }
rayon = { version = "1", optional = true }

[features]
default = [ "parallel" ]
parallel = [ "rayon", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel" ]
