[package]
name = "ark-ip-proofs"
version = "0.1.0"
authors = [
    "Benedikt Bünz",
    "Mary Maller",
    "Pratyush Mishra",
    "Nirvan Tyagi",
    "Noah Vesely",
]
edition = "2018"
homepage = "https://github.com/arkworks-rs/ripp"
repository = "https://github.com/arkworks-rs/ripp"
documentation = "https://docs.rs/ark-ip-proofs/"

[dependencies]
ark-ec = { git = "https://github.com/arkworks-rs/algebra", features = [ "parallel" ] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", features = [ "parallel" ] }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", features = [ "parallel" ] }
ark-std = { git = "https://github.com/arkworks-rs/utils", features = [ "parallel" ] }
ark-groth16 = {git = "https://github.com/arkworks-rs/groth16/", features = [ "parallel" ] }
bench-utils = { git = "https://github.com/arkworks-rs/utils" }
rand = { version = "0.8" }
digest = { version = "0.9" }
num-traits = { version = "0.2" }
itertools = { version = "0.9" }

ark-inner-products = { path = "../inner_products" }
ark-dh-commitments = { path = "../dh_commitments" }

[dev-dependencies]
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", features = [ "curve" ] }
ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }

ark-relations = { git = "https://github.com/arkworks-rs/snark" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std" }
blake2 = { version = "0.9" }

[features]
print-trace = [ "bench-utils/print-trace" ]
