[package]
name = "ark-ip-proofs"
version = "0.1.0"
authors = [
    "Benedikt Bünz",
    "Mary Maller",
    "Pratyush Mishra",
    "Nirvan Tyagi",
    "Noah Vesely",
]
edition = "2018"
homepage = "https://github.com/arkworks-rs/ripp"
repository = "https://github.com/arkworks-rs/ripp"
documentation = "https://docs.rs/ark-ip-proofs/"

[dependencies]
ark-ec = "0.2"
ark-ff = "0.2"
ark-poly = "0.2"
ark-std = "0.2"
ark-groth16 = "0.2"
digest = "0.9"
num-traits = "0.2"
itertools = "0.10"
rayon = { version = "1", optional = true }

ark-inner-products = { path = "../inner_products" }
ark-dh-commitments = { path = "../dh_commitments" }

[dev-dependencies]
ark-bls12-381 = { version = "0.2", features = [ "curve" ] }
ark-ed-on-bls12-381 = "0.2"

ark-relations = "0.2"
ark-r1cs-std = "0.2"
blake2 = "0.9"

[features]
default = [ "parallel" ]
parallel = [ "rayon", "ark-ec/parallel", "ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-groth16/parallel" ]
print-trace = [ "ark-std/print-trace" ]
