[package]
name = "ark-ip-proofs"
version = "0.3.0"
authors = [
    "Benedikt Bünz",
    "Mary Maller",
    "Pratyush Mishra",
    "Nirvan Tyagi",
    "Psi Vesely",
]
edition = "2018"
homepage = "https://github.com/arkworks-rs/ripp"
repository = "https://github.com/arkworks-rs/ripp"
documentation = "https://docs.rs/ark-ip-proofs/"

[dependencies]
ark-ec = "0.3"
ark-ff = "0.3"
ark-poly = "0.3"
ark-serialize = { version = "0.3", features = [ "derive" ] }
ark-std = "0.3"
ark-groth16 = "0.3"
digest = "0.9"
num-traits = "0.2"
itertools = "0.10"
rayon = { version = "1", optional = true }

ark-inner-products = { path = "../inner_products" }
ark-dh-commitments = { path = "../dh_commitments" }

[dev-dependencies]
ark-bls12-381 = { version = "0.3", features = [ "curve" ] }
ark-ed-on-bls12-381 = "0.3"

ark-relations = "0.4"
ark-r1cs-std = "0.3"
blake2 = "0.9"

[features]
default = [ "parallel" ]
parallel = [ "rayon", "ark-ec/parallel", "ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-groth16/parallel" ]
print-trace = [ "ark-std/print-trace" ]
