[package]
name = "ark-sipp"
version = "0.1.0"
authors = [
    "Benedikt Bünz",
    "Mary Maller",
    "Pratyush Mishra",
    "Nirvan Tyagi",
    "Noah Vesely",
]
description = "A library for proofs about inner pairing products"
homepage = "https://github.com/arkworks-rs/ripp"
repository = "https://github.com/arkworks-rs/ripp"
documentation = "https://docs.rs/ark-sipp/"
keywords = ["cryptography", "finite fields", "elliptic curves", "pairing", "bulletproofs"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
ark-ec = "0.2"
ark-ff = "0.2"
ark-std = "0.2"
rayon = "1"
rand_core = "0.5"
rand_chacha = "0.2.1"
digest = "0.8"

[dev-dependencies]
blake2 = "0.8.1"
csv = "1"
serde = { version = "1", features = [ "derive" ] }
ark-bls12-377 = { version = "0.2", features = [ "curve" ] }

[features]
default = [ "parallel" ]
parallel = [ "ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel" ]
