[package]
name = "ark-sipp"
version = "0.3.0"
authors = [
    "Benedikt Bünz",
    "Mary Maller",
    "Pratyush Mishra",
    "Nirvan Tyagi",
    "Psi Vesely",
]
description = "A library for proofs about inner pairing products"
homepage = "https://github.com/arkworks-rs/ripp"
repository = "https://github.com/arkworks-rs/ripp"
documentation = "https://docs.rs/ark-sipp/"
keywords = ["cryptography", "finite fields", "elliptic curves", "pairing", "bulletproofs"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
ark-ec = "0.3"
ark-ff = "0.3"
ark-serialize = "0.3"
ark-std = "0.3"
rayon = "1"
rand_core = "0.6"
merlin = "3"

[dev-dependencies]
csv = "1"
serde = { version = "1", features = [ "derive" ] }
ark-bls12-377 = { version = "0.3", features = [ "curve" ] }

[features]
default = [ "parallel" ]
parallel = [ "ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel" ]
